# EdgeSense

./: .gitignore  LICENSE  README.md  __init__.py  edge_sense.py  edge_sense_dialog.py  edgesense.py  metadata.txt  pyproject.toml  requirements.txt
config/: __init__.py  constants.py  paths.py
output/ndvi/: info.txt
scripts/: copy_files.sh  download_data.sh  run_pipeline.sh
src/: 1_compute_ndvi.py  1_compute_ndvi_ndmi.py  1_ndvi.py  2_create_forest_mask.py  2_forestMaskCreation.py  3_edgeCoreSeparation.py  3_edge_core_separation.py  4_fragmentMetrics.py  4_fragment_metrics.py  5_analyse_change.py  5_changeAnalysis.py  5_change_analysis.py  config.py  download_aoi_tif.py  edge_core_mask.py  forest_mask.py  fragmentation_metrics.py  road_mask.py  run_pipeline.sh  spectral_indices.py  utils.py  validate_indices.py
tools/: compare_fragstats.py  download_aoi_tif.py  plot_fragmentation_trends.py
