[project]
name = "edgesense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "affine==2.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "blessings==1.7",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "contourpy==1.3.3",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "earthengine-api==1.7.16",
    "filelock==3.25.1",
    "fonttools==4.61.1",
    "fsspec==2026.2.0",
    "gdown==5.2.1",
    "geopandas==1.1.2",
    "google-api-core==2.30.0",
    "google-api-python-client==2.192.0",
    "google-auth==2.49.0",
    "google-auth-httplib2==0.3.0",
    "google-cloud-core==2.5.0",
    "google-cloud-storage==3.9.0",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.8.0",
    "googleapis-common-protos==1.73.0",
    "h11==0.16.0",
    "hf-xet==1.3.2",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "huggingface-hub==1.6.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "omnicloudmask==1.7.1",
    "osmnx==2.1.0",
    "packaging==26.0",
    "pandas==3.0.1",
    "pathlib==1.0.1",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "proto-plus==1.27.1",
    "protobuf==6.33.5",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pygments==2.19.2",
    "pyogrio==0.12.1",
    "pyparsing==3.3.2",
    "pyproj==3.7.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "rasterio==1.3.11",
    "requests==2.32.5",
    "rich==14.3.3",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "scipy==1.17.1",
    "segmentation-models-pytorch==0.5.0",
    "setuptools==82.0.1",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "snuggs==1.4.7",
    "soupsieve==2.8.3",
    "sympy==1.14.0",
    "timm==1.0.25",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
]
